tests/conformance/reject/0088-side-effect-import.ts
// @thales-expect-error TH0088
import '@thales/prelude';
